syntax = "proto3";
package business_article.v1;

import "article/v1/article.proto";
import "business/v1/business.proto";

option go_package = "sabitou/proto/business_article/v1;businessArticleV1";

service BusinessArticleService {
  rpc CreateBusinessArticle(CreateBusinessArticleRequest) returns (CreateBusinessArticleResponse);
  rpc GetBusinessArticle(GetBusinessArticleRequest) returns (GetBusinessArticleResponse);
  rpc UpdateBusinessArticle(UpdateBusinessArticleRequest) returns (UpdateBusinessArticleResponse);
  rpc DeleteBusinessArticle(DeleteBusinessArticleRequest) returns (DeleteBusinessArticleResponse);
}

message BusinessArticle {
  string id = 1;
  string business_id = 7;
  string article_id = 2;
  double price = 3;
  string created_at = 4;
  string updated_at = 5;
}

message CreateBusinessArticleRequest {
  BusinessArticle business_article = 1;
}

message CreateBusinessArticleResponse {
  string id = 1;
}

message GetBusinessArticleRequest {
  string id = 1;
}

message GetBusinessArticleResponse {
  string id = 1;
  article.v1.Article article = 2;
  business.v1.Business business = 7;
  double price = 3;
  string created_at = 4;
  string updated_at = 5;
}

message UpdateBusinessArticleRequest {
  BusinessArticle business_article = 1;
}

message UpdateBusinessArticleResponse {
  BusinessArticle business_article = 1;
}

message DeleteBusinessArticleRequest {
  string id = 1;
}

message DeleteBusinessArticleResponse {
  bool success = 1;
}
